# moskv-1-apex

./: .cursorrules  .gitignore  .moskv_override  .vercelignore  CORTEX_EXECUTIVE_GRAPH.md  CORTEX_OSINT_KB.json  CORTEX_PRONOIA_THEOREM.md  CORTEX_SWARM.yaml  Cronos  Dockerfile.vesicle  L2_dependency_graph.yaml  MILESTONES.md  MOSKV_SLEEP_PROTOCOL.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md  agent_skills_translated.csv  app.js  autopoiesis_success.txt  aventura.html  babylon60  babylon60.py  babylon60.rs  base60_exergy.py  build_novel.py  causal_test.b60  cdp_diagnostics.py  cdp_lead_extractor.py  chronos_swarm.py  com.moskv.board.plist  com.moskv.exergy.plist  com.moskv.nexus.plist  cortex.db  cortex_anergy_linter.py  cortex_base60_engine.py  cortex_brt_protocol.py  cortex_dag.sqlite-shm  cortex_dag.sqlite-wal  cortex_directives.yaml  cortex_git_stress_test.py  (+77 more)
.agents/: BRIEFING.md  handoff.md  smtp_check.py
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: copilot-instructions.md  integrations-policy.md
.unlighthouse/: ci-result.json
Dossier_Defensa_Fiscal/: Checklist_Extraccion_Datos.md  Ledger_Pericial_Script.py
MOSKV_LANDING_PAGE/: index.html
archive/: legacy_omega.tar.gz.sha256
assets/: logo.txt
capitulos_raw/: bloque_01_cap_02.md  bloque_01_caps_03_08.md  bloque_02_caps_09_15.md  bloque_03_caps_16_22.md  bloque_04_caps_23_29.md
core/moskv-1/kernel/rust_core/: Cargo.toml
core/moskv-1/kernel/rust_core/src/: lib.rs  main.rs
cortex_blog/: Singularity_6000.md  watcher.py
cortex_git_stress/: entropy_0_0.txt  entropy_0_1.txt  (+29 more)
(+652 files in other folders)
