[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moskv_1"
version = "0.1.0"
description = "Foundational Python implementation of the Moskv-1 cognitive architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
