[package]
name = "moskv_dag_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "moskv_dag_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
dashmap = "5.5.3"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5.11"
rusqlite = { version = "0.30.0", features = ["bundled"] }
